--- a/client/src/index.css
+++ b/client/src/index.css
@@ -8,3 +8,22 @@ body,
     width: 100%;
     font-family: "Inter", sans-serif;
 }
+
+::-webkit-scrollbar {
+    width: 10px;
+}
+
+/* track */
+::-webkit-scrollbar-track {
+    background: #21295c;
+}
+
+/* handle */
+::-webkit-scrollbar-thumb {
+    background: #7a7f9d;
+}
+
+/* handle on hover */
+::-webkit-scrollbar-track:hover {
+    background: #21295c;
+}
